# Teleoperation-of-Rover5-on-ROS2-using-Dual-Raspberry-Pi

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: camera_view.rviz
launch/: robot_with_camera.launch.py
project/: livestream.py  motor_control.py  servo_control.py
project/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
