cmake_minimum_required(VERSION 3.8)
project(project)

# Since this is a Python package, we don't use CMake much.
find_package(ament_cmake REQUIRED)
ament_python_install_package(${PROJECT_NAME})

install(
    DIRECTORY launch
    DESTINATION share/${PROJECT_NAME}/
)

install(
    DIRECTORY config
    DESTINATION share/${PROJECT_NAME}/
)
ament_package()
